--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,8 @@
 }
 
 .dark {
-  --background: 0 0% 3.9%;
+  /* --background: 0 0% 3.9%; */
+  --background: 233.33deg 100% 3.53%;
   --foreground: 0 0% 98%;
 
   --card: 0 0% 3.9%;
